// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PaginationBlock /> Test PaginationBlock component with transitions 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ul
    className="pagination-block"
>
    <li
        className="pagination-item arrow disabled"
    >
        <a
            className="pagination-link"
            onClick={undefined}
        >
            «
        </a>
    </li>
    <li
        className="pagination-item arrow short-show disabled"
    >
        <a
            className="pagination-link pp"
            onClick={undefined}
        >
            ‹
        </a>
    </li>
    <li
        className="pagination-item short-show active"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            1
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            2
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            3
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            4
        </a>
    </li>
    <li
        className="pagination-item short-show disabled"
    >
        <a
            className="pagination-link"
            onClick={undefined}
        >
            ...
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            9
        </a>
    </li>
    <li
        className="pagination-item arrow short-show"
    >
        <a
            className="pagination-link nn"
            onClick={[Function]}
        >
            ›
        </a>
    </li>
    <li
        className="pagination-item arrow"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            »
        </a>
    </li>
</ul>,
  "nodes": Array [
    <ul
      className="pagination-block"
>
      <li
            className="pagination-item arrow disabled"
      >
            <a
                  className="pagination-link"
                  onClick={undefined}
            >
                  «
            </a>
      </li>
      <li
            className="pagination-item arrow short-show disabled"
      >
            <a
                  className="pagination-link pp"
                  onClick={undefined}
            >
                  ‹
            </a>
      </li>
      <li
            className="pagination-item short-show active"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  1
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  2
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  3
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  4
            </a>
      </li>
      <li
            className="pagination-item short-show disabled"
      >
            <a
                  className="pagination-link"
                  onClick={undefined}
            >
                  ...
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  9
            </a>
      </li>
      <li
            className="pagination-item arrow short-show"
      >
            <a
                  className="pagination-link nn"
                  onClick={[Function]}
            >
                  ›
            </a>
      </li>
      <li
            className="pagination-item arrow"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  »
            </a>
      </li>
</ul>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <PaginationBlock
        entriesPerPage={10}
        offset={0}
        setOffset={[Function]}
        totalEntriesAmount={89}
/>,
      "_debugID": 97,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "entriesPerPage": 10,
          "offset": 0,
          "setOffset": [Function],
          "totalEntriesAmount": 89,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ul
          className="pagination-block"
>
          <li
                    className="pagination-item arrow disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              «
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show disabled"
          >
                    <a
                              className="pagination-link pp"
                              onClick={undefined}
                    >
                              ‹
                    </a>
          </li>
          <li
                    className="pagination-item short-show active"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              1
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              2
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              3
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              4
                    </a>
          </li>
          <li
                    className="pagination-item short-show disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              ...
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              9
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show"
          >
                    <a
                              className="pagination-link nn"
                              onClick={[Function]}
                    >
                              ›
                    </a>
          </li>
          <li
                    className="pagination-item arrow"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              »
                    </a>
          </li>
</ul>,
        "_debugID": 98,
        "_renderedOutput": <ul
          className="pagination-block"
>
          <li
                    className="pagination-item arrow disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              «
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show disabled"
          >
                    <a
                              className="pagination-link pp"
                              onClick={undefined}
                    >
                              ‹
                    </a>
          </li>
          <li
                    className="pagination-item short-show active"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              1
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              2
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              3
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              4
                    </a>
          </li>
          <li
                    className="pagination-item short-show disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              ...
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              9
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show"
          >
                    <a
                              className="pagination-link nn"
                              onClick={[Function]}
                    >
                              ›
                    </a>
          </li>
          <li
                    className="pagination-item arrow"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              »
                    </a>
          </li>
</ul>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <PaginationBlock
    entriesPerPage={10}
    offset={0}
    setOffset={[Function]}
    totalEntriesAmount={89}
/>,
}
`;

exports[`Component <PaginationBlock /> Test PaginationBlock component with transitions 2`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ul
    className="pagination-block"
>
    <li
        className="pagination-item arrow disabled"
    >
        <a
            className="pagination-link"
            onClick={undefined}
        >
            «
        </a>
    </li>
    <li
        className="pagination-item arrow short-show disabled"
    >
        <a
            className="pagination-link pp"
            onClick={undefined}
        >
            ‹
        </a>
    </li>
    <li
        className="pagination-item short-show active"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            1
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            2
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            3
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            4
        </a>
    </li>
    <li
        className="pagination-item short-show disabled"
    >
        <a
            className="pagination-link"
            onClick={undefined}
        >
            ...
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            9
        </a>
    </li>
    <li
        className="pagination-item arrow short-show"
    >
        <a
            className="pagination-link nn"
            onClick={[Function]}
        >
            ›
        </a>
    </li>
    <li
        className="pagination-item arrow"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            »
        </a>
    </li>
</ul>,
  "nodes": Array [
    <ul
      className="pagination-block"
>
      <li
            className="pagination-item arrow disabled"
      >
            <a
                  className="pagination-link"
                  onClick={undefined}
            >
                  «
            </a>
      </li>
      <li
            className="pagination-item arrow short-show disabled"
      >
            <a
                  className="pagination-link pp"
                  onClick={undefined}
            >
                  ‹
            </a>
      </li>
      <li
            className="pagination-item short-show active"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  1
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  2
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  3
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  4
            </a>
      </li>
      <li
            className="pagination-item short-show disabled"
      >
            <a
                  className="pagination-link"
                  onClick={undefined}
            >
                  ...
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  9
            </a>
      </li>
      <li
            className="pagination-item arrow short-show"
      >
            <a
                  className="pagination-link nn"
                  onClick={[Function]}
            >
                  ›
            </a>
      </li>
      <li
            className="pagination-item arrow"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  »
            </a>
      </li>
</ul>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <PaginationBlock
        entriesPerPage={10}
        offset={0}
        setOffset={[Function]}
        totalEntriesAmount={89}
/>,
      "_debugID": 97,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "entriesPerPage": 10,
          "offset": 0,
          "setOffset": [Function],
          "totalEntriesAmount": 89,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ul
          className="pagination-block"
>
          <li
                    className="pagination-item arrow disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              «
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show disabled"
          >
                    <a
                              className="pagination-link pp"
                              onClick={undefined}
                    >
                              ‹
                    </a>
          </li>
          <li
                    className="pagination-item short-show active"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              1
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              2
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              3
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              4
                    </a>
          </li>
          <li
                    className="pagination-item short-show disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              ...
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              9
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show"
          >
                    <a
                              className="pagination-link nn"
                              onClick={[Function]}
                    >
                              ›
                    </a>
          </li>
          <li
                    className="pagination-item arrow"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              »
                    </a>
          </li>
</ul>,
        "_debugID": 98,
        "_renderedOutput": <ul
          className="pagination-block"
>
          <li
                    className="pagination-item arrow disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              «
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show disabled"
          >
                    <a
                              className="pagination-link pp"
                              onClick={undefined}
                    >
                              ‹
                    </a>
          </li>
          <li
                    className="pagination-item short-show active"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              1
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              2
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              3
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              4
                    </a>
          </li>
          <li
                    className="pagination-item short-show disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              ...
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              9
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show"
          >
                    <a
                              className="pagination-link nn"
                              onClick={[Function]}
                    >
                              ›
                    </a>
          </li>
          <li
                    className="pagination-item arrow"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              »
                    </a>
          </li>
</ul>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <PaginationBlock
    entriesPerPage={10}
    offset={0}
    setOffset={[Function]}
    totalEntriesAmount={89}
/>,
}
`;

exports[`Component <PaginationBlock /> Test PaginationBlock when totalEntriesAmount less then offset 1`] = `
<ul
  className="pagination-block"
>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link pp"
      onClick={[Function]}
    >
      ‹
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="pagination-item arrow short-show disabled"
  >
    <a
      className="pagination-link nn"
      onClick={undefined}
    >
      ›
    </a>
  </li>
  <li
    className="pagination-item arrow disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      »
    </a>
  </li>
</ul>
`;

exports[`Component <PaginationBlock /> Test PaginationBlock when we are in the middle of the pagination block 1`] = `
<ul
  className="pagination-block"
>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link pp"
      onClick={[Function]}
    >
      ‹
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="pagination-item short-show disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      ...
    </a>
  </li>
  <li
    className="pagination-item short-show active"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      5
    </a>
  </li>
  <li
    className="pagination-item short-show disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      ...
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      12
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link nn"
      onClick={[Function]}
    >
      ›
    </a>
  </li>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      »
    </a>
  </li>
</ul>
`;

exports[`Component <PaginationBlock /> Test PaginationBlock when we have less than six pages 1`] = `
<ul
  className="pagination-block"
>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link pp"
      onClick={[Function]}
    >
      ‹
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="pagination-item short-show active"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link nn"
      onClick={[Function]}
    >
      ›
    </a>
  </li>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      »
    </a>
  </li>
</ul>
`;

exports[`Component <PaginationBlock /> should be renders when totalEntriesAmount less then offset 1`] = `
<ul
  className="pagination-block"
>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link pp"
      onClick={[Function]}
    >
      ‹
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="pagination-item arrow short-show disabled"
  >
    <a
      className="pagination-link nn"
      onClick={undefined}
    >
      ›
    </a>
  </li>
  <li
    className="pagination-item arrow disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      »
    </a>
  </li>
</ul>
`;

exports[`Component <PaginationBlock /> should be renders when we are in the middle of the pagination block 1`] = `
<ul
  className="pagination-block"
>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link pp"
      onClick={[Function]}
    >
      ‹
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="pagination-item short-show disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      ...
    </a>
  </li>
  <li
    className="pagination-item short-show active"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      5
    </a>
  </li>
  <li
    className="pagination-item short-show disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      ...
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      12
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link nn"
      onClick={[Function]}
    >
      ›
    </a>
  </li>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      »
    </a>
  </li>
</ul>
`;

exports[`Component <PaginationBlock /> should be renders when we have less than six pages 1`] = `
<ul
  className="pagination-block"
>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link pp"
      onClick={[Function]}
    >
      ‹
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="pagination-item short-show active"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link nn"
      onClick={[Function]}
    >
      ›
    </a>
  </li>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      »
    </a>
  </li>
</ul>
`;

exports[`Component <PaginationBlock /> should be with transitions 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ul
    className="pagination-block"
>
    <li
        className="pagination-item arrow disabled"
    >
        <a
            className="pagination-link"
            onClick={undefined}
        >
            «
        </a>
    </li>
    <li
        className="pagination-item arrow short-show disabled"
    >
        <a
            className="pagination-link pp"
            onClick={undefined}
        >
            ‹
        </a>
    </li>
    <li
        className="pagination-item short-show active"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            1
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            2
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            3
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            4
        </a>
    </li>
    <li
        className="pagination-item short-show disabled"
    >
        <a
            className="pagination-link"
            onClick={undefined}
        >
            ...
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            9
        </a>
    </li>
    <li
        className="pagination-item arrow short-show"
    >
        <a
            className="pagination-link nn"
            onClick={[Function]}
        >
            ›
        </a>
    </li>
    <li
        className="pagination-item arrow"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            »
        </a>
    </li>
</ul>,
  "nodes": Array [
    <ul
      className="pagination-block"
>
      <li
            className="pagination-item arrow disabled"
      >
            <a
                  className="pagination-link"
                  onClick={undefined}
            >
                  «
            </a>
      </li>
      <li
            className="pagination-item arrow short-show disabled"
      >
            <a
                  className="pagination-link pp"
                  onClick={undefined}
            >
                  ‹
            </a>
      </li>
      <li
            className="pagination-item short-show active"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  1
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  2
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  3
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  4
            </a>
      </li>
      <li
            className="pagination-item short-show disabled"
      >
            <a
                  className="pagination-link"
                  onClick={undefined}
            >
                  ...
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  9
            </a>
      </li>
      <li
            className="pagination-item arrow short-show"
      >
            <a
                  className="pagination-link nn"
                  onClick={[Function]}
            >
                  ›
            </a>
      </li>
      <li
            className="pagination-item arrow"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  »
            </a>
      </li>
</ul>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <PaginationBlock
        entriesPerPage={10}
        offset={0}
        setOffset={[Function]}
        totalEntriesAmount={89}
/>,
      "_debugID": 97,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "entriesPerPage": 10,
          "offset": 0,
          "setOffset": [Function],
          "totalEntriesAmount": 89,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ul
          className="pagination-block"
>
          <li
                    className="pagination-item arrow disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              «
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show disabled"
          >
                    <a
                              className="pagination-link pp"
                              onClick={undefined}
                    >
                              ‹
                    </a>
          </li>
          <li
                    className="pagination-item short-show active"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              1
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              2
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              3
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              4
                    </a>
          </li>
          <li
                    className="pagination-item short-show disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              ...
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              9
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show"
          >
                    <a
                              className="pagination-link nn"
                              onClick={[Function]}
                    >
                              ›
                    </a>
          </li>
          <li
                    className="pagination-item arrow"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              »
                    </a>
          </li>
</ul>,
        "_debugID": 98,
        "_renderedOutput": <ul
          className="pagination-block"
>
          <li
                    className="pagination-item arrow disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              «
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show disabled"
          >
                    <a
                              className="pagination-link pp"
                              onClick={undefined}
                    >
                              ‹
                    </a>
          </li>
          <li
                    className="pagination-item short-show active"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              1
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              2
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              3
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              4
                    </a>
          </li>
          <li
                    className="pagination-item short-show disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              ...
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              9
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show"
          >
                    <a
                              className="pagination-link nn"
                              onClick={[Function]}
                    >
                              ›
                    </a>
          </li>
          <li
                    className="pagination-item arrow"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              »
                    </a>
          </li>
</ul>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <PaginationBlock
    entriesPerPage={10}
    offset={0}
    setOffset={[Function]}
    totalEntriesAmount={89}
/>,
}
`;

exports[`Component <PaginationBlock /> should be with transitions 2`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <ul
    className="pagination-block"
>
    <li
        className="pagination-item arrow disabled"
    >
        <a
            className="pagination-link"
            onClick={undefined}
        >
            «
        </a>
    </li>
    <li
        className="pagination-item arrow short-show disabled"
    >
        <a
            className="pagination-link pp"
            onClick={undefined}
        >
            ‹
        </a>
    </li>
    <li
        className="pagination-item short-show active"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            1
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            2
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            3
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            4
        </a>
    </li>
    <li
        className="pagination-item short-show disabled"
    >
        <a
            className="pagination-link"
            onClick={undefined}
        >
            ...
        </a>
    </li>
    <li
        className="pagination-item short-show"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            9
        </a>
    </li>
    <li
        className="pagination-item arrow short-show"
    >
        <a
            className="pagination-link nn"
            onClick={[Function]}
        >
            ›
        </a>
    </li>
    <li
        className="pagination-item arrow"
    >
        <a
            className="pagination-link"
            onClick={[Function]}
        >
            »
        </a>
    </li>
</ul>,
  "nodes": Array [
    <ul
      className="pagination-block"
>
      <li
            className="pagination-item arrow disabled"
      >
            <a
                  className="pagination-link"
                  onClick={undefined}
            >
                  «
            </a>
      </li>
      <li
            className="pagination-item arrow short-show disabled"
      >
            <a
                  className="pagination-link pp"
                  onClick={undefined}
            >
                  ‹
            </a>
      </li>
      <li
            className="pagination-item short-show active"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  1
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  2
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  3
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  4
            </a>
      </li>
      <li
            className="pagination-item short-show disabled"
      >
            <a
                  className="pagination-link"
                  onClick={undefined}
            >
                  ...
            </a>
      </li>
      <li
            className="pagination-item short-show"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  9
            </a>
      </li>
      <li
            className="pagination-item arrow short-show"
      >
            <a
                  className="pagination-link nn"
                  onClick={[Function]}
            >
                  ›
            </a>
      </li>
      <li
            className="pagination-item arrow"
      >
            <a
                  className="pagination-link"
                  onClick={[Function]}
            >
                  »
            </a>
      </li>
</ul>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <PaginationBlock
        entriesPerPage={10}
        offset={0}
        setOffset={[Function]}
        totalEntriesAmount={89}
/>,
      "_debugID": 97,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "entriesPerPage": 10,
          "offset": 0,
          "setOffset": [Function],
          "totalEntriesAmount": 89,
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <ul
          className="pagination-block"
>
          <li
                    className="pagination-item arrow disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              «
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show disabled"
          >
                    <a
                              className="pagination-link pp"
                              onClick={undefined}
                    >
                              ‹
                    </a>
          </li>
          <li
                    className="pagination-item short-show active"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              1
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              2
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              3
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              4
                    </a>
          </li>
          <li
                    className="pagination-item short-show disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              ...
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              9
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show"
          >
                    <a
                              className="pagination-link nn"
                              onClick={[Function]}
                    >
                              ›
                    </a>
          </li>
          <li
                    className="pagination-item arrow"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              »
                    </a>
          </li>
</ul>,
        "_debugID": 98,
        "_renderedOutput": <ul
          className="pagination-block"
>
          <li
                    className="pagination-item arrow disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              «
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show disabled"
          >
                    <a
                              className="pagination-link pp"
                              onClick={undefined}
                    >
                              ‹
                    </a>
          </li>
          <li
                    className="pagination-item short-show active"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              1
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              2
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              3
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              4
                    </a>
          </li>
          <li
                    className="pagination-item short-show disabled"
          >
                    <a
                              className="pagination-link"
                              onClick={undefined}
                    >
                              ...
                    </a>
          </li>
          <li
                    className="pagination-item short-show"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              9
                    </a>
          </li>
          <li
                    className="pagination-item arrow short-show"
          >
                    <a
                              className="pagination-link nn"
                              onClick={[Function]}
                    >
                              ›
                    </a>
          </li>
          <li
                    className="pagination-item arrow"
          >
                    <a
                              className="pagination-link"
                              onClick={[Function]}
                    >
                              »
                    </a>
          </li>
</ul>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <PaginationBlock
    entriesPerPage={10}
    offset={0}
    setOffset={[Function]}
    totalEntriesAmount={89}
/>,
}
`;

exports[`Component <PaginationBlock /> should renders on the first page 1`] = `
<ul
  className="pagination-block"
>
  <li
    className="pagination-item arrow disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      «
    </a>
  </li>
  <li
    className="pagination-item arrow short-show disabled"
  >
    <a
      className="pagination-link pp"
      onClick={undefined}
    >
      ‹
    </a>
  </li>
  <li
    className="pagination-item short-show active"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="pagination-item short-show disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      ...
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      9
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link nn"
      onClick={[Function]}
    >
      ›
    </a>
  </li>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      »
    </a>
  </li>
</ul>
`;

exports[`Component <PaginationBlock /> should renders on the last page 1`] = `
<ul
  className="pagination-block"
>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link pp"
      onClick={[Function]}
    >
      ‹
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      2
    </a>
  </li>
  <li
    className="pagination-item short-show active"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      3
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      4
    </a>
  </li>
  <li
    className="pagination-item short-show disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      ...
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      9
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link nn"
      onClick={[Function]}
    >
      ›
    </a>
  </li>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      »
    </a>
  </li>
</ul>
`;

exports[`Component <PaginationBlock /> should renders when we move to another page 1`] = `
<ul
  className="pagination-block"
>
  <li
    className="pagination-item arrow"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      «
    </a>
  </li>
  <li
    className="pagination-item arrow short-show"
  >
    <a
      className="pagination-link pp"
      onClick={[Function]}
    >
      ‹
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      1
    </a>
  </li>
  <li
    className="pagination-item short-show disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      ...
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      6
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      7
    </a>
  </li>
  <li
    className="pagination-item short-show"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      8
    </a>
  </li>
  <li
    className="pagination-item short-show active"
  >
    <a
      className="pagination-link"
      onClick={[Function]}
    >
      9
    </a>
  </li>
  <li
    className="pagination-item arrow short-show disabled"
  >
    <a
      className="pagination-link nn"
      onClick={undefined}
    >
      ›
    </a>
  </li>
  <li
    className="pagination-item arrow disabled"
  >
    <a
      className="pagination-link"
      onClick={undefined}
    >
      »
    </a>
  </li>
</ul>
`;
